# ndc-calcite

./: .dir-locals.el  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build-local.sh  build.sh  cli-update-model.sh  cli.sh  cmd.sh  connector-definition.tgz  connector-metadata.yaml  demo.sh  dev.docker-compose.yaml  ndc-calcite.md  run-connector-local.sh  run-connector-update.sh  rust-analyzer.toml  test.sh
.github/workflows/: docker-image-build.yaml  docker-image.yml
.run/: Run ndc-calcite-csv.run.xml  Run ndc-calcite-file.run.xml  Run ndc-calcite-jdbc.run.xml  Run ndc-test-file.run.xml  Run ndc-test-jdbc.run.xml  Run ndc-test.run.xml
adapters/arrow/: .env  dev.local.configuration.json  model.json
adapters/bigquery/: .env  configuration.json  key.json  model.json
adapters/cassandra/: .env  configuration.json  dev.local.configuration.json  model.json
adapters/csv/: .env  configuration.json  dev.docker-compose.calcite.yaml  dev.local.configuration.json  docker-compose.calcite.yaml  model.json
adapters/databricks/: configuration.json  dev.local.configuration.json  model.json  schema.json
adapters/db2/: .env
adapters/file/: .env  add-connector.sh  build.sh  configuration.json  connector-metadata.yaml  dev.docker-compose.calcite.yaml  dev.docker-compose.jdbc.yaml  dev.local.configuration.json  docker-compose.calcite.yaml  docker-compose.file.yaml.template  model.json  model.yaml  model2.yaml  supergraph.template
adapters/git/: model.json
adapters/graphql/: model.json
adapters/hive/: Dockerfile.hive  add_sample_data.sh  create_dirs.sh  dev.local.configuration.json  docker-compose.yaml  hive-site.xml
adapters/jdbc/: .env  .env.local  build.sh  configuration.json  dev.docker-compose.calcite.yaml  dev.local.configuration.json  docker-compose.calcite.yaml  model.json  model.yaml  model_test.json  schema.json
adapters/kafka/: dev.local.configuration.json
adapters/openapi/: .gitignore
adapters/phoenix/: Dockerfile  docker-compose.yaml  query.sh
adapters/redis/: .env
adapters/redshift/: .env  configuration.json  model.json
adapters/snowflake/: model.json
adapters/spark/: compose.yaml
adapters/splunk/: configuration.json  model.json
adapters/sybase/: model.json
adapters/trino/: model.json
apache-atlas/: docker-compose.yaml
calcite-cli-util/: config.json  dependency-reduced-pom.xml  model.json  pom.xml  run.sh
calcite-rs-jni/: .gitignore  CLAUDE.md  README.md  build.sh  pom.xml
calcite-rs-jni/aperio-jdbc-driver/: .gitignore  README.md  local-test.properties.sample  pom.xml  release.sh
calcite-rs-jni/bigquery/: README.md  pom.xml
calcite-rs-jni/file-jdbc-driver/: .env.example  .gitignore  CASING.md  README.md  TESTING.md  TestFileDriver.java  TestFileDriverDebug.java  TestFileDriverFixed.java  TestNamingRules.java  TestViewDebug.java  naming-test.csv  pom.xml  test-data.csv  view-test.csv
calcite-rs-jni/jdbc/: README.md  pom.xml
calcite-rs-jni/jni/: README.md  logging.properties  pom.xml
calcite-rs-jni/jni-arrow/: pom.xml
calcite-rs-jni/odbc/: .gitignore  DDN-ODBC.sln  Directory.build.props  README.md  build.ps1  build.ps1.old  clean.ps1  clean_metadata.ps1  install-driver.ps1  license.rtf  make_msi.ps1
calcite-rs-jni/odbc/DDN-ODBC-Driver/: CMakeLists.txt  CMakeSettings.json  odbc_driver.def  vcpkg.json
calcite-rs-jni/odbc/DDN-ODBC-Driver/include/: Connection.hpp  DiagnosticManager.hpp  Environment.hpp  Error.hpp  Globals.hpp  JVMSingleton.hpp  JniParam.hpp  Logging.hpp  Statement.hpp  connection.hpp  environment.hpp  globals.hpp  httplib.h  logging.hpp  statement.hpp
calcite-rs-jni/odbc/DDN-ODBC-Driver/src/: Connection.cpp  JVMSingleton.cpp  JniParam.cpp  Logging.cpp  Main.cpp  SQLAllocHandle.cpp  SQLBindParameter.cpp  SQLColAttribute.cpp  SQLColumns.cpp  SQLConnect.cpp  SQLDescribeCol.cpp  SQLDisconnect.cpp  SQLDriverConnect.cpp  SQLExecDirect.cpp  SQLFetch.cpp  SQLFreeHandle.cpp  SQLFreeStmt.cpp  SQLGetConnectAttr.cpp  SQLGetData.cpp  SQLGetDiagField.cpp  SQLGetDiagRec.cpp  SQLGetInfo.cpp  SQLGetStmtAttr.cpp  SQLGetTypeInfo.cpp  SQLInfo.cpp  SQLMoreResults.cpp  SQLRowCount.cpp  SQLSetConnectAttr.cpp  SQLSetDescField.cpp  SQLSetEnvAttr.cpp  SQLSetStmtAttr.cpp  SQLTables.cpp  Statement.cpp  connection.cpp  logging.cpp  main.cpp  statement.cpp
calcite-rs-jni/py_graphql_sql/: .gitignore  MANIFEST.in  README.md  __init__.py  build.py  dev.sh  pyproject.toml  requirements.txt  setup.cfg  test.py
calcite-rs-jni/py_graphql_sql/examples/: basic_usage.py
calcite-rs-jni/py_graphql_sql/py_graphql_sql/: __init__.py  connection.py  cursor.py  db_types.py  exceptions.py
calcite-rs-jni/py_graphql_sql/py_graphql_sql/sqlalchemy/: __init__.py
calcite-rs-jni/py_graphql_sql/py_graphql_sql/sqlalchemy/hasura/: __init__.py  ddnbase.py
calcite-rs-jni/py_graphql_sql/stubs/: jaydebeapi.pyi  jpype.pyi
calcite-rs-jni/py_graphql_sql/tests/: conftest.py  test_dbapi.py
calcite-rs-jni/sharepoint-list-jdbc-driver/: DEPLOY.md  README.md  pom.xml  release-auto.sh  settings.xml.template  setup-gpg.sh  upload-gpg-key.sh
calcite-rs-jni/splunk-jdbc-driver/: .gitignore  DEPLOY.md  README.md  pom.xml  release-auto.sh  release.sh  settings.xml.template  setup-gpg.sh  upload-gpg-key.sh
calcite-rs-jni/sqlengine/: README.md  pom.xml
ci/: deploy.sh
config-templates/: configuration.json  docker-compose.file.calcite.yaml  docker-compose.file.meta.yaml  model.json
config-templates/models/: model.arrow.json  model.files.json  model.json  model.pg.json
connector-definition/: connector-metadata.yaml
crates/calcite-schema/: Cargo.toml
crates/cli/: Cargo.toml
crates/ndc-calcite/: Cargo.toml  README.md
grafana/: compose.yaml  otel-collector-config.yaml  supergraph-compose.yaml
ndc-calcite/: Cargo.toml
ndc-calcite/adapters/arrow/: .env
ndc-calcite/adapters/csv/: .env  README.md  model.json
ndc-calcite/adapters/file/: .env  model.json
ndc-calcite/adapters/file/resources/test/bug/: ARCHERS.json
ndc-calcite/adapters/jdbc/: .env  model.json
ndc-calcite/adapters/redis/: .env
ndc-test/: README.md
shared/: tempo.yaml
(+284 files in other folders)
