[workspace]
resolver = "2"

package.version = "0.1.4"
package.edition = "2021"
package.license = "Apache-2.0"

members = [
    "crates/cli",
    "crates/connectors/*"
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# disable certain pedantic warnings
doc_markdown = { level = "allow" }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
module_name_repetitions = { level = "allow" }
must_use_candidate = { level = "allow" }
wildcard_imports = { level = "allow" }

[workspace.dependencies]
indexmap = "2.2.6"
jni = { version = "0.21.1", features = ["invocation"] }
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.1.4" }
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", tag = "v0.1.4" }
async-trait = "0.1.79"
axum = { version = "0.6.20", features = ["http2"] }
axum-extra = "0.8.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
http = "0.2"
mime = "0.3.17"
opentelemetry = "0.22.0"
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "0.15.0", features = ["reqwest-client", "gzip-tonic", "tls", "tls-roots", "http-proto"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-zipkin = "0.20.0"
prometheus = "0.13.3"
reqwest = "0.11.27"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["raw_value"] }
schemars = "0.8.1"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.4", features = ["cors", "trace", "validate-request"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
url = "2.5.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
anyhow = "1.0.86"
serde_yaml = "0.9"
insta = "1"
tempfile = "3"
build-data = "0.2"