[package]
name = "ndc-calcite"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "ndc-calcite"
path = "bin/reference/main.rs"

[dependencies]
ndc-models = { path = "../ndc-models" }
jni = { version = "0.21.1", features = ["invocation"] }
axum = "0.6"
indexmap = { version = "2", features = ["serde"] }
prometheus = "0.13"
regex = "1"
dotenv = "0.15.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.23.0" }
opentelemetry_sdk = "0.23.0"
opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.24.0"

rand = "0.8.5"
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
ndc-test = { path = "../ndc-test" }

async-trait = "0.1"
goldenfile = "1"
tokio-test = "0.4"
