[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_graphql_sql"
version = "0.1.0"
description = "A SQLAlchemy dialect for interacting with Hasura GraphQL endpoints."
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md", content-type = "text/markdown"}
authors = [
    {name = "Kenneth Stott", email = "ken@hasura.io"}
]
dependencies = [
    "sqlalchemy >= 1.4.0",
    "JPype1 >= 1.2.0",
    "jaydebeapi >= 1.2.3",
    "typing-extensions >= 4.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Optional dependencies section
[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme"]
dev = ["black", "isort"]

[project.urls]
homepage = "https://github.com/hasura/ndc-calcite"

[project.entry-points."sqlalchemy.dialects"]
"hasura.py_graphql_sql" = "py_graphql_sql.sqlalchemy.hasura.ddnbase:HasuraDDNDialect"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"py_graphql_sql" = ["jars/*"]
