[metadata]
name = py_graphql_sql
version = 0.1.0
description = Read-only DB-API 2.0 compliant JDBC connector for GraphQL
author = Your Name
author_email = your.email@example.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8,<4.0
packages = find:
include_package_data = True
install_requires =
    jaydebeapi>=1.2.3
    JPype1>=1.2.0
    typing-extensions>=4.5.0
    sqlalchemy>=1.4.0

[options.packages.find]
include =
    py_graphql_sql*

[options.extras_require]
dev =
    pytest>=7.3.1
    pytest-cov>=4.1.0
    black>=23.7.0
    pylint>=2.17.5
    isort>=5.12.0
    mypy>=1.4.1

[options.entry_points]
sqlalchemy.dialects =
    hasura_ddn = py_graphql_sql.sqlalchemy.hasura_ddn:HasuraDDNDialect

[pylint]
disable =
    C0111,  # missing-docstring
    C0103,  # invalid-name (for DB-API compatibility)
    R0903,  # too-few-public-methods
    W0622   # redefined-builtin (for Warning)
max-line-length = 88

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True

[[mypy.overrides]]
module =
    jaydebeapi.*
    jpype.*
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 3

[black]
line-length = 88
target-version = py38
include = \.pyi?$
